--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ theme_settings:
   # Meta
   title: Leonardo Iacovini
   avatar: 
-  favicon: 
+  favicon: "assets/favicon.ico"
   gravatar: # Email MD5 hash
   description: "Computer Engineering student @ POLI-USP and Software Engineer @ Nubank"
 
